# axum_server

./: .gitignore  Cargo.toml
public/: index.html
src/: main.rs
src/graphql/: greeting.rs  handlers.rs  mod.rs
src/graphql/resolvers/: mod.rs
src/utils/: constants.rs  mod.rs  password.rs
