[package]
name = "axum_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.5.1"
async-graphql = { version = "5.0.10", features = ["log"] }
async-graphql-axum = "5.0.10"
axum = { version = "0.6.18", features = ["headers"] }
dotenv = "0.15.0"
http = "0.2.9"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.102"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.4.1", features = ["cors", "fs"] }
tracing-subscriber = "0.3.17"
